--- a/src/scss/components/list_page.scss
+++ b/src/scss/components/list_page.scss
@@ -318,7 +318,7 @@
 }
 
 @media (max-width: 991.98px) {
-  .list-page-chart {
+  .list-page-container:not(.single-line-header) .list-page-chart {
     height: -webkit-calc(100% - 144px);
     height: calc(100% - 144px);
     margin: 0 16px 16px;
@@ -538,7 +538,7 @@
 }
 
 @media (max-width: 991.98px) {
-  .list-page-table {
+  .list-page-container:not(.single-line-header) .list-page-table {
     height: -webkit-calc(100% - 128px);
     height: calc(100% - 128px);
     padding-left: 16px;
