--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -147,6 +147,11 @@
 
   .page-title-help-link {
     font-size: 12px;
+
+    > i {
+      font-size: 16px;
+      vertical-align: middle;
+    }
   }
 }
 
