ignore overflow when settings-content-table-rows has single row (item) and bump version 2.0.105

--- a/src/scss/layout/admin/settings/layout.scss
+++ b/src/scss/layout/admin/settings/layout.scss
@@ -80,8 +80,11 @@
 
   .settings-content-table-rows {
     height: auto;
-    overflow-y: auto;
     max-height: 440px;
+
+    &:not(.has-single-row) {
+      overflow-y: auto;
+    }
   }
 
   .sortable-list {
