--- a/src/scss/fonts/ledger.scss
+++ b/src/scss/fonts/ledger.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Ledger';
   src:
-    url('../../fonts/Ledger.ttf?qgtw4c') format('truetype'),
-    url('../../fonts/Ledger.woff?qgtw4c') format('woff'),
-    url('../../fonts/Ledger.svg?qgtw4c#Ledger') format('svg');
+    url('../../fonts/Ledger.ttf?tka6vx') format('truetype'),
+    url('../../fonts/Ledger.woff?tka6vx') format('woff'),
+    url('../../fonts/Ledger.svg?tka6vx#Ledger') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -253,6 +253,9 @@
   content: "\e93c";
 }
 .ledger-icon-link:before {
+  content: "\f18e";
+}
+.ledger-icon-link1:before {
   content: "\e93d";
 }
 .ledger-icon-local-florist:before {
@@ -414,6 +417,9 @@
 .ledger-icon-stop:before {
   content: "\f3b6";
 }
+.ledger-icon-streams:before {
+  content: "\e973";
+}
 .ledger-icon-tag:before {
   content: "\e962";
 }
@@ -473,9 +479,6 @@
 }
 .ledger-icon-view-list:before {
   content: "\e972";
-}
-.ledger-icon-view-stream:before {
-  content: "\e973";
 }
 .ledger-icon-view-timeline:before {
   content: "\e975";
