Resize chart, table and activities when search is open and bump version 2.0.114

--- a/src/scss/components/entity_activity/layout.scss
+++ b/src/scss/components/entity_activity/layout.scss
@@ -66,6 +66,13 @@
   height: calc(100% - 64px);
 }
 
+@media (min-width: 992px) {
+  .has-search .list-page-container .entity-activity {
+    height: -webkit-calc(100% - 144px);
+    height: calc(100% - 144px);
+  }
+}
+
 @media (max-width: 991.98px) {
   .list-page-container .entity-activity {
     height: -webkit-calc(100% - 128px);
