--- a/src/scss/layout/admin/index.scss
+++ b/src/scss/layout/admin/index.scss
@@ -11,7 +11,7 @@
 @import '../../components/modal/index';
 @import '../../components/tab';
 @import '../../components/table/index';
-@import '../../components/list_page';
+@import '../../components/list_page/index';
 @import '../../components/filter';
 @import '../../components/drawer';
 @import '../../components/card/index';
