--- a/src/scss/components/list_page/nav.scss
+++ b/src/scss/components/list_page/nav.scss
@@ -32,9 +32,9 @@
   }
 
   &.active {
-    color: #0c0d0d;
+    color: #696e6f;
     border-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.06);
+    background-color: #dce3e6;
   }
 
   .ledger-icons {
