Fixed floating-label dropdown-multiple height and bump version 2.0.121

--- a/src/scss/components/form/floating_label.scss
+++ b/src/scss/components/form/floating_label.scss
@@ -31,8 +31,10 @@
     min-height: 56px;
 
     &.dropdown-multiple {
-      height: auto;
-      min-height: 56px;
+      &.has-value {
+        height: auto;
+        min-height: 56px;
+      }
 
       .dropdown-tags {
         width: calc(100% - 16px);
