Ellipsis list-page-nav-item text and bump version 2.0.127

--- a/src/scss/components/list_page/nav.scss
+++ b/src/scss/components/list_page/nav.scss
@@ -25,6 +25,9 @@
   width: 100%;
   cursor: pointer;
   padding: 10px 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &:hover {
     text-decoration: none;
