Added support for datetime form-group

--- a/src/scss/components/form/layout.scss
+++ b/src/scss/components/form/layout.scss
@@ -277,8 +277,8 @@ label .invalid-feedback {
   }
 }
 
-.personal-name .form-group,
-.address .form-group {
+.address .form-group,
+.datetime .form-group {
   padding-top: 2px !important;
   padding-bottom: 2px !important;
 }
