--- a/src/scss/components/list_page/layout.scss
+++ b/src/scss/components/list_page/layout.scss
@@ -46,6 +46,35 @@
     width: 34px;
   }
 
+  .btn-group {
+    display: flex;
+
+    .btn {
+      overflow: unset;
+      margin-right: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    .btn-primary:hover {
+      opacity: 1;
+    }
+
+    .side-button {
+      margin-left: 0;
+      border-radius: 0 8px 8px 0;
+      border-bottom: none;
+      width: auto;
+
+      i {
+        position: absolute;
+        right: 12px;
+        line-height: unset;
+        font-size: 24px;
+      }
+    }
+  }
+
   .list-settings {
     text-transform: none;
     text-align: left;
