--- a/src/scss/components/list_page/chart.scss
+++ b/src/scss/components/list_page/chart.scss
@@ -1,8 +1,8 @@
 .list-page-chart {
   position: relative;
   overflow: auto;
-  height: -webkit-calc(100% - 88px);
-  height: calc(100% - 88px);
+  height: -webkit-calc(100% - 84px);
+  height: calc(100% - 84px);
   box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
   background-color: #fff;
   border-radius: 8px;
@@ -12,33 +12,26 @@
 }
 
 .has-columns .list-page-chart {
-  height: 100%;
+  height: 100% !important;
 }
 
 @media (min-width: 992px) {
   .has-search {
     .list-page-chart {
-      height: -webkit-calc(100% - 168px);
-      height: calc(100% - 168px);
-    }
-
-    &.has-columns .list-page-chart {
-      height: -webkit-calc(100% - 80px);
-      height: calc(100% - 80px);
+      height: -webkit-calc(100% - 164px);
+      height: calc(100% - 164px);
     }
   }
 }
 
 @media (max-width: 991.98px) {
-  .list-page-container:not(.single-line-header) .list-page-chart {
-    height: -webkit-calc(100% - 144px);
-    height: calc(100% - 144px);
-    margin: 0 16px 16px;
+  .list-page-chart {
+    margin: 10px 16px 16px;
   }
 
-  // @see line 14
-  .has-columns .list-page-chart {
-    height: 100% !important;
+  .list-page-container:not(.single-line-header) .list-page-chart {
+    height: -webkit-calc(100% - 148px);
+    height: calc(100% - 148px);
   }
 }
 
