--- a/src/scss/components/list_page/table.scss
+++ b/src/scss/components/list_page/table.scss
@@ -4,7 +4,6 @@
   width: 100%;
   border: 0;
   display: inline-block;
-  float: left;
   padding: 0 24px;
 
   &.has-stats {
@@ -20,11 +19,11 @@
 }
 
 .has-columns .list-page-table {
-  height: 100%;
+  height: 100% !important;
 
   &.has-stats {
-    height: -webkit-calc(100% - 84px);
-    height: calc(100% - 84px);
+    height: -webkit-calc(100% - 84px) !important;
+    height: calc(100% - 84px) !important;
   }
 }
 
@@ -39,20 +38,14 @@
         height: calc(100% - 228px);
       }
     }
-
-    &.has-columns .list-page-table {
-      height: -webkit-calc(100% - 80px);
-      height: calc(100% - 80px);
-
-      &.has-stats {
-        height: -webkit-calc(100% - 164px);
-        height: calc(100% - 164px);
-      }
-    }
   }
 }
 
 @media (max-width: 991.98px) {
+  .list-page-table {
+    padding-top: 10px;
+  }
+
   .list-page-container:not(.single-line-header) .list-page-table {
     height: -webkit-calc(100% - 128px);
     height: calc(100% - 128px);
@@ -65,13 +58,14 @@
     }
   }
 
-  // @see line 22
-  .has-columns .list-page-table {
-    height: 100% !important;
+  .list-page-container.is-collapsed {
+    .list-page-table {
+      height: 100%;
 
-    &.has-stats {
-      height: -webkit-calc(100% - 84px) !important;
-      height: calc(100% - 84px) !important;
+      &.has-stats {
+        height: -webkit-calc(100% - 84px);
+        height: calc(100% - 84px);
+      }
     }
   }
 }
