--- a/src/scss/layout/admin/drawer.scss
+++ b/src/scss/layout/admin/drawer.scss
@@ -289,11 +289,10 @@
   }
 
   .drawer-title {
-    img {
+    .profile-avatar {
       width: 60px;
       height: 60px;
       background-color: #fff;
-      border-radius: 8px;
       margin-right: 24px;
     }
 
