--- a/src/scss/layout/admin/header.scss
+++ b/src/scss/layout/admin/header.scss
@@ -103,11 +103,10 @@ header {
   }
 }
 
-.header-profile img {
+.header-profile .profile-avatar {
   width: 40px;
   height: 40px;
-  border-radius: 8px;
-  background-color: #fcfcfc;
+  background-color: #fff;
 }
 
 .header-badge {
