Fixed content-wrapper height for mobile devices (<576px) and bump version 2.0.146

--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -30,6 +30,13 @@
   }
 }
 
+@media (max-width: 575.98px) {
+  .content-wrapper {
+    height: calc(100vh - 114px);
+    max-height: calc(100vh - 114px);
+  }
+}
+
 .body-content {
   position: relative;
   margin: 0;
