--- a/src/scss/components/table/cardgrid.scss
+++ b/src/scss/components/table/cardgrid.scss
@@ -192,6 +192,10 @@
     }
   }
 
+  &.is-hover .cell-content {
+    background: rgba(144, 151, 153, 0.06);
+  }
+
   &.is-current .cell-content {
     background: rgba(144, 151, 153, 0.16);
   }
