--- a/src/scss/layout/admin/search.scss
+++ b/src/scss/layout/admin/search.scss
@@ -6,36 +6,58 @@
   max-height: 100%;
 }
 
-.radio-button-group-search-results.radio-button-group {
-  width: 115px;
-  float: left;
-  margin: 50px 0;
-  position: relative;
-  left: calc(50% - 350px - 135px);
-  font-size: 14px;
+.search-results-filters {
+  position: sticky;
+  top: 50px;
 
-  .radio-button-group-item {
-    display: table;
-    padding-bottom: 20px;
-
-    + .radio-button-group-item {
-      margin-left: 0;
-    }
+  .dropdown {
+    display: none;
   }
 
-  .radio-button {
-    color: #0c0d0d;
-    font-weight: 500;
+  .radio-button-group {
+    margin: 0 50px;
+    font-size: 14px;
 
-    > i {
-      margin-right: 5px;
+    .radio-button-group-item {
+      display: table;
+      padding-bottom: 20px;
+
+      + .radio-button-group-item {
+        margin-left: 0;
+      }
+    }
+
+    .radio-button {
+      color: #0c0d0d;
+      font-weight: 500;
+
+      > i {
+        margin-right: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 991.98px) {
+  .search-results-filters {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+
+    .dropdown {
+      display: block !important;
+      float: right;
+      margin: 32px 16px;
+    }
+
+    .radio-button-group {
+      display: none;
     }
   }
 }
 
 .search-results-list {
-  width: 700px;
-  margin: 16px auto;
+  padding: 16px;
 }
 
 .search-results-page-info {
