--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -406,6 +406,16 @@
   right: 20px;
   display: flex;
 
+  .button-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    i {
+      font-size: 24px;
+    }
+  }
+
   .dropdown {
     border-bottom: none;
 
