Centered list-filter-selector-selected and list-buttons-toggle-content

--- a/src/scss/components/list_page/filter_selector.scss
+++ b/src/scss/components/list_page/filter_selector.scss
@@ -27,7 +27,7 @@
   font-weight: 600;
   height: 28px;
   line-height: 24px;
-  padding-right: 24px;
+  padding: 4px 24px 4px 0;
   position: relative;
   width: 100%;
   white-space: nowrap;
