--- a/src/scss/components/list_page/layout.scss
+++ b/src/scss/components/list_page/layout.scss
@@ -14,7 +14,7 @@
 
   .list-page-back-link {
     float: left;
-    padding-right: 16px;
+    padding: 8px 16px 0 0;
     display: inline-block;
     font-size: 20px;
     color: #0C0D0D;
