Revert "Updated list-buttons-toggle-content and button display to inline"
This reverts commit ffecc1581f3af676ad9c6ff12b13000c53607a8e.

--- a/src/scss/components/list_page/layout.scss
+++ b/src/scss/components/list_page/layout.scss
@@ -157,7 +157,8 @@
 
     &.has-toggle > {
       .list-buttons-toggle-content {
-        display: inline !important;
+        display: flex !important;
+        justify-content: center;
 
         .dropdown-options {
           z-index: 2 !important;
@@ -232,7 +233,7 @@
     }
 
     > .list-buttons-toggle-button {
-      display: inline !important;
+      display: flex !important;
       padding-left: 8px;
     }
   }
