--- a/src/scss/components/entity_activity/list.scss
+++ b/src/scss/components/entity_activity/list.scss
@@ -83,7 +83,6 @@
   position: relative;
   flex: auto;
   min-width: 0;
-  max-width: 600px;
 }
 
 .activity-item-header {
@@ -114,29 +113,26 @@
 }
 
 .activity-item-score {
-  display: none;
-  flex-direction: row;
-  font-size: 15px;
-  font-weight: 600;
+  display: flex;
+  flex-flow: row wrap;
+  font-size: 12px;
   color: #979797;
-  margin-top: 24px;
+  margin-bottom: 20px;
 
   > div,
   > a {
+    color: #696e6f;
+    padding: 0 8px;
+    white-space: nowrap;
     display: flex;
     align-items: center;
-    color: inherit;
 
     &:hover {
       text-decoration: none;
     }
 
-    &:not(:last-child) {
-      margin-right: 24px;
-    }
-
-    > i {
-      font-size: 18px;
+    i {
+      font-size: 16px;
     }
   }
 }
@@ -153,6 +149,12 @@
       color: #dce3e6;
       font-style: normal;
     }
+  }
+
+  .activity-item-score {
+    display: none;
+    margin-top: 20px;
+    margin-bottom: 0
   }
 }
 
