Hide dropdown-menu when "x-out-of-boundaries"

--- a/src/scss/components/form/dropdown.scss
+++ b/src/scss/components/form/dropdown.scss
@@ -78,6 +78,10 @@
   margin-right: 2px;
 }
 
+.dropdown-menu[x-out-of-boundaries] {
+  display: none;
+}
+
 .dropdown-options {
   border-radius: 8px;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
