--- a/src/scss/components/form/layout.scss
+++ b/src/scss/components/form/layout.scss
@@ -111,10 +111,10 @@ select {
   &.is-required > {
     label::after,
     .col-form-label::after {
-      content: '•';
+      content: '*';
       font-size: 14px;
       line-height: 14px;
-      color: #ea4335;
+      color: #8d8d8d;
       margin-left: 4px;
     }
   }
