--- a/src/scss/layout/admin/sidebar.scss
+++ b/src/scss/layout/admin/sidebar.scss
@@ -237,13 +237,16 @@
   i {
     color: #fff;
     font-size: 24px !important;
-    margin-right: 0 !important;
-    right: 10px !important;
   }
 }
 
 .sidebar-open i {
   font-size: 32px !important;
+}
+
+.sidebar-close i {
+  margin-right: 0 !important;
+  right: 10px !important;
 }
 
 .sidebar-brand-logo,
