--- a/src/scss/fonts/ledger.scss
+++ b/src/scss/fonts/ledger.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Ledger';
   src:
-    url('../../fonts/Ledger.ttf?1gysp1') format('truetype'),
-    url('../../fonts/Ledger.woff?1gysp1') format('woff'),
-    url('../../fonts/Ledger.svg?1gysp1#Ledger') format('svg');
+    url('../../fonts/Ledger.ttf?c42511') format('truetype'),
+    url('../../fonts/Ledger.woff?c42511') format('woff'),
+    url('../../fonts/Ledger.svg?c42511#Ledger') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -365,6 +365,9 @@
 }
 .ledger-icon-refresh:before {
   content: "\f1b9";
+}
+.ledger-icon-reload:before {
+  content: "\e90a";
 }
 .ledger-icon-reply:before {
   content: "\e953";
