Updated default blue color

--- a/src/scss/components/form/checkbox.scss
+++ b/src/scss/components/form/checkbox.scss
@@ -51,7 +51,7 @@
   line-height: 24px;
 
   &:focus .unchecked {
-    color: #0d94f6;
+    color: #1350aa;
   }
 
   .unchecked {
@@ -60,7 +60,7 @@
 
   .checked {
     display: none;
-    color: #0d94f6;
+    color: #1350aa;
   }
 
   &.is-checked .checked {
