--- a/src/scss/components/form/dropdown_option_list.scss
+++ b/src/scss/components/form/dropdown_option_list.scss
@@ -249,7 +249,7 @@
 
 .option-list-loading-spinner {
   display: inline-block;
-  fill: #0d94f6;
+  fill: #1350aa;
   height: 32px;
   width: 32px;
 }
