--- a/src/scss/components/form/icon_selector.scss
+++ b/src/scss/components/form/icon_selector.scss
@@ -17,7 +17,7 @@
 
   .checkbox-input:checked + .checkbox-display,
   .radio-input:checked + .radio-button {
-    color: #0d94f6;
+    color: #1350aa;
   }
 
   .ledger-icons,
