--- a/src/scss/components/modal/layout.scss
+++ b/src/scss/components/modal/layout.scss
@@ -150,7 +150,7 @@
 
 .modal-spinner .circle-spinner {
   display: inline-block;
-  fill: #0d94f6;
+  fill: #1350aa;
   height: 64px;
   width: 64px;
 }
