--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -131,7 +131,7 @@
 
 .page-title {
   .page-title-back-link {
-    color: #0d94f6;
+    color: #1350aa;
     display: block;
     font-size: 12px;
     line-height: 14px;
