Updated activity timeline look

--- a/src/scss/components/entity_activity/index.scss
+++ b/src/scss/components/entity_activity/index.scss
@@ -1,5 +1,6 @@
 @import './layout';
 @import './summary';
 @import './list';
+@import './timeline';
 @import './quick_actions';
 @import './reactions';
